# sbl-filing-api-validations

./: Dockerfile  Lambda_Dockerfile  Local_Dockerfile  README.md  SQS_Dockerfile  data.json  do_sqs.sh  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_158638b40523220f_csv_to_parquet_py.html  z_158638b40523220f_parquet_validator_py.html  z_158638b40523220f_results_aggregator_py.html
lambda_csv_to_parquet/: Dockerfile  README.md  lambda_function.py  pyproject.toml
lambda_parquet_validator/: Dockerfile  README.md  lambda_function.py  pyproject.toml
lambda_validation_aggregator/: lambda_function.py  pyproject.toml
src/sbl_validation_processor/: parquet_validator.py  results_aggregator.py
src/sbl_validation_processor/local_watchdog/: local_file_watcher.py
src/sbl_validation_processor/sqs_csv_to_parquet/: sqs_listener.py
src/sbl_validation_processor/sqs_parquet_validation/: job.py  sqs_listener.py
src/sbl_validation_processor/sqs_validation_aggregator/: job.py  sqs_listener.py
src/sbl_validation_service/: config.py  main.py
src/sbl_validation_service/entities/engine/: engine.py
src/sbl_validation_service/routers/: endpoint.py
src/sbl_validation_service/services/: validator.py
tests/: test_parquet_validator.py  test_results_aggregator.py
validation_api/: pyproject.toml
validation_api/src/: .env.local
validation_api/src/sbl_validation_service/entities/models/: dto.py
validation_api/src/sbl_validation_service/routers/: endpoint.py
validation_aws/: Job_Dockerfile  Lambda_Dockerfile  Local_Dockerfile  SQS_Dockerfile  build_lambda.sh  do_sqs.sh  pyproject.toml
validation_aws/helm/: role.yaml  values-sqs-csv-poller-cfpb-dev-public.yaml  values-sqs-pqs-poller-cfpb-dev-public.yaml  values-sqs-res-poller-cfpb-dev-public.yaml
validation_aws/lambda_csv_to_parquet/: Dockerfile  lambda_function.py
validation_aws/lambda_parquet_validator/: lambda_function.py
validation_aws/lambda_validation_aggregator/: lambda_function.py
validation_aws/local_watchdog/: local_file_watcher.py
validation_aws/sqs_csv_to_parquet/: job.py  sqs_listener.py
validation_aws/sqs_parquet_validation/: job.py  sqs_listener.py  validator_job.py
validation_aws/sqs_validation_aggregator/: job.py  sqs_listener.py
validation_aws/src/sbl_validation_processor/: csv_to_parquet.py  parquet_validator.py  results_aggregator.py
