[tool.poetry]
name = "lambda-parquet-validator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
regtech-data-validator = {git = "https://github.com/cfpb/regtech-data-validator.git", branch="parquet_validator"}
boto3 = "~1.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
