[tool.poetry]
name = "lambda-validation-aggregator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sbl-filing-api = {git = "https://github.com/cfpb/sbl-filing-api.git"}
boto3 = "~1.34.0"
greenlet = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
