[tool.poetry]
name = "sbl-validation-service"
version = "0.1.0"
description = "SBL Validation Service"
authors = ["CFPB's RegTech Team"]
readme = "README.md"
packages = [{ include = "sbl_validation_service", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4"
fastapi = "^0.109.1"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
regtech-api-commons = {git = "https://github.com/cfpb/regtech-api-commons.git"}
regtech-data-validator = {git = "https://github.com/cfpb/regtech-data-validator.git"}
python-multipart = "^0.0.18"
fsspec = "^2024.2.0"
s3fs = "^2024.2.0"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-env = "^1.1.3"
moto = "^4.2.13"


[tool.poetry.group.linters.dependencies]
ruff = "0.1.6"
black = "23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = [
  "--cov-report=term-missing",
  "--cov-branch",
  "--cov-report=xml",
  "--cov-report=term",
  "--cov=src",
  "-vv",
  "--strict-markers",
  "-rfE",
]
env = [
  "DB_SCHEMA=main",
  "DB_USER=user",
  "DB_PWD=user",
  "DB_HOST=localhost:5432",
  "DB_NAME=filing",
  "FS_UPLOAD_CONFIG__PROTOCOL=file",
  "FS_UPLOAD_CONFIG__ROOT=../upload",
  "FS_UPLOAD_CONFIG__MKDIR=true",
  "FS_DOWNLOAD_CONFIG__PROTOCOL=file"
]
testpaths = ["tests"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.coverage.run]
relative_files = true
source = ["src"]

[tool.coverage.report]
skip_empty = true