[tool.poetry]
name = "sbl-validation-processor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{ include = "sbl_validation_processor", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
sbl-filing-api = {git = "https://github.com/cfpb/sbl-filing-api.git", branch="lambda_sqs_filer"}
regtech-data-validator = {git = "https://github.com/cfpb/regtech-data-validator.git", branch="parquet_validator"}
boto3 = "~1.34.0"
greenlet = "^3.1.1"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
pandas = "^2.2.3"
pyarrow = "^18.0.0"
kubernetes = "^31.0.0"
watchdog = "^6.0.0"
psutil = "^6.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
